[gd_scene load_steps=19 format=2]

[ext_resource path="res://Image-assets/farm.png" type="Texture" id=1]
[ext_resource path="res://Scenes/farmProduct.tscn" type="PackedScene" id=2]
[ext_resource path="res://Image-assets/title-blue-small.png" type="Texture" id=3]
[ext_resource path="res://Fonts/Breathe Fire.otf" type="DynamicFontData" id=4]
[ext_resource path="res://Image-assets/title blue-no-text.png" type="Texture" id=5]
[ext_resource path="res://Image-assets/title grey-no-text.png" type="Texture" id=6]
[ext_resource path="res://Fonts/main_font.tres" type="DynamicFont" id=7]
[ext_resource path="res://Image-assets/button-five-pressed.png" type="Texture" id=8]
[ext_resource path="res://Image-assets/button-five-disabled.png" type="Texture" id=9]
[ext_resource path="res://Image-assets/button-five.png" type="Texture" id=10]
[ext_resource path="res://Scripts/farm.gd" type="Script" id=11]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="Theme" id=2]
VScrollBar/icons/decrement = null
VScrollBar/icons/decrement_highlight = null
VScrollBar/icons/increment = null
VScrollBar/icons/increment_highlight = null
VScrollBar/styles/grabber = null
VScrollBar/styles/grabber_highlight = null
VScrollBar/styles/grabber_pressed = null
VScrollBar/styles/scroll = SubResource( 1 )
VScrollBar/styles/scroll_focus = null

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="DynamicFont" id=7]
use_filter = true
font_data = ExtResource( 4 )

[node name="farm" type="Node2D"]
script = ExtResource( 11 )
__meta__ = {
"_edit_vertical_guides_": [ 85.2642 ]
}

[node name="farmBkgr" type="Sprite" parent="."]
position = Vector2( 214.047, 391.466 )
texture = ExtResource( 1 )

[node name="scroll" type="ScrollContainer" parent="farmBkgr"]
margin_left = -142.0
margin_top = -119.0
margin_right = 148.0
margin_bottom = 150.0
rect_pivot_offset = Vector2( 202.03, 55.2662 )
theme = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vbox" type="VBoxContainer" parent="farmBkgr/scroll"]
margin_bottom = 360.0
custom_constants/separation = 120

[node name="farmProduct" parent="farmBkgr/scroll/vbox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 0.0
margin_bottom = 0.0

[node name="farmProduct2" parent="farmBkgr/scroll/vbox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 120.0
margin_right = 0.0
margin_bottom = 120.0
targetIngredient = "sugar"

[node name="farmProduct3" parent="farmBkgr/scroll/vbox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 240.0
margin_right = 0.0
margin_bottom = 240.0

[node name="farmProduct4" parent="farmBkgr/scroll/vbox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 360.0
margin_right = 0.0
margin_bottom = 360.0

[node name="upgradesBkgr" type="Sprite" parent="."]
visible = false
position = Vector2( 214.047, 391.466 )
texture = ExtResource( 1 )

[node name="staffPanel" type="Sprite" parent="."]
position = Vector2( 214.047, 391.466 )
texture = ExtResource( 1 )

[node name="hiredStaffLabel" type="Label" parent="staffPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -308.783
margin_top = -369.992
margin_right = -209.783
margin_bottom = -338.992
rect_pivot_offset = Vector2( 164.293, -48.6385 )
text = "Hired farmers:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="staffCount" type="Label" parent="staffPanel/hiredStaffLabel"]
margin_left = 95.8604
margin_top = 8.4635
margin_right = 165.86
margin_bottom = 22.4635
rect_pivot_offset = Vector2( 44.0111, 31.2012 )
text = "[count]"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hireStaffBtn" type="TextureButton" parent="staffPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -308.783
margin_top = -335.0
margin_right = -161.783
margin_bottom = -306.0
rect_pivot_offset = Vector2( -39.5659, 23.0849 )
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 8 )
texture_disabled = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnLabel" type="Label" parent="staffPanel/hireStaffBtn"]
margin_left = 5.16376
margin_top = 8.34143
margin_right = 45.1638
margin_bottom = 22.3414
text = "Hire:"
__meta__ = {
"_edit_group_": true
}

[node name="staffMoodLabel" type="Label" parent="staffPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -308.783
margin_top = -283.0
margin_right = -211.783
margin_bottom = -269.0
rect_pivot_offset = Vector2( 81.6778, 38.0244 )
text = "Farmers mood:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="greyContainer" type="Sprite" parent="."]
position = Vector2( 379.34, 227.938 )
texture = ExtResource( 6 )
offset = Vector2( -73.0922, -19.462 )

[node name="upgradesButton" type="Button" parent="greyContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -166.592
margin_top = -41.462
margin_right = -166.592
margin_bottom = -41.462
rect_pivot_offset = Vector2( 162.34, 40.9384 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="upgradesLabel" type="Label" parent="greyContainer/upgradesButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.5
margin_top = -7.5
margin_right = 32.5
margin_bottom = 7.5
rect_pivot_offset = Vector2( 106.054, 31.3116 )
custom_fonts/font = ExtResource( 7 )
text = "UPGRADES"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="blueContainer" type="Sprite" parent="."]
position = Vector2( 379.34, 227.938 )
texture = ExtResource( 5 )
offset = Vector2( -257.32, -19.5348 )

[node name="farmLabel" type="Label" parent="blueContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -376.82
margin_top = -49.0348
margin_right = -324.82
margin_bottom = -34.0348
rect_pivot_offset = Vector2( 288.055, 31.3116 )
custom_fonts/font = ExtResource( 7 )
text = "FARM"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="openStaff" type="TextureButton" parent="."]
margin_left = 145.128
margin_top = 232.706
margin_right = 285.128
margin_bottom = 262.706
rect_pivot_offset = Vector2( 234.212, -4.76801 )
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="staffLabel" type="Label" parent="openStaff"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -39.5002
margin_top = -9.00002
margin_right = 39.5002
margin_bottom = 9.00002
custom_fonts/font = SubResource( 7 )
text = "Staff"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="infoLabel" type="Label" parent="."]
margin_left = 87.5836
margin_top = 498.679
margin_right = 347.584
margin_bottom = 529.679
rect_pivot_offset = Vector2( 161.103, 17.478 )
text = "Farmers will leave your farm if the payment they receive is too low."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="paymentLabel" type="Label" parent="."]
margin_left = 85.2642
margin_top = 435.466
margin_right = 214.264
margin_bottom = 449.466
text = "Farmer salary / day :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="paySlider" type="HSlider" parent="paymentLabel"]
margin_top = 22.0
margin_right = 270.0
margin_bottom = 38.0
max_value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="checkUi" type="Timer" parent="."]
wait_time = 0.001
autostart = true
[connection signal="pressed" from="staffPanel/hireStaffBtn" to="." method="_on_hireStaffBtn_pressed"]
[connection signal="value_changed" from="paymentLabel/paySlider" to="." method="_on_paySlider_value_changed"]
[connection signal="timeout" from="checkUi" to="." method="_on_checkUi_timeout"]
